Sidetracked. Added beginning of auth.
