# routes/users.js
@@ -1,6 +1,16 @@
-// routes/user.js
 import { Router } from 'express';
 const router = Router();
+
+import userController from '../controllers/userController.js';
+
+router.route('/:user_id')
+    .get()
+    .put()
+    .delete()
+
+router.route('/')
+    .get(userController.getAll)
+    .post()
 
 
 
